// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard advanced customisation using overrides 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="bx--modal is-visible"
      data-floating-menu-container={true}
    >
      <div
        className="iot--card iot--pie-chart-card iot--card--wrapper"
        data-testid="basicCardStoryTest"
        id="basicCardStory"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
            "height": "calc(100% - 50px)",
            "width": "calc(100% - 50px)",
          }
        }
      >
        <div
          className="iot--card--header"
          data-testid="basicCardStoryTest-header"
        >
          <span
            className="iot--card--title"
            data-testid="basicCardStoryTest-title"
            title="Animations turned on and FlyoutMenu added to table"
          >
            <div
              className="iot--card--title--text"
              data-testid="basicCardStoryTest-title-notip"
            >
              Animations turned on and FlyoutMenu added to table
            </div>
          </span>
          <div
            className="iot--card--toolbar"
            data-testid="basicCardStoryTest-toolbar"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
              data-testid="basicCardStoryTest-toolbar-close-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              title="Close"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Close"
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content iot--card--content--expanded"
          data-testid="basicCardStoryTest-content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="iot--pie-chart-container iot--pie-chart-container__expanded"
          >
            <div
              id="mock-pie-chart"
            />
            <div
              className="iot--pie-chart-card--stateful-table iot--table-container bx--data-table-container"
              data-testid="basicCardStory-table-table-container"
            >
              <section
                aria-label="data table toolbar"
                className="bx--table-toolbar"
                data-testid="basicCardStory-table-table-toolbar"
              >
                <div
                  aria-hidden={true}
                  className="bx--batch-actions iot--table-batch-actions"
                  data-testid="basicCardStory-table-table-toolbar-batch-actions"
                  onScroll={[Function]}
                >
                  <div
                    className="bx--batch-summary"
                  >
                    <p
                      className="bx--batch-summary__para"
                    >
                      <span
                        dir="auto"
                      >
                        0 items selected
                      </span>
                    </p>
                  </div>
                  <div
                    className="bx--action-list"
                  >
                    <button
                      aria-describedby={null}
                      aria-pressed={null}
                      className="bx--batch-summary__cancel bx--btn bx--btn--primary"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex={-1}
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </div>
                <div
                  className="bx--toolbar-content iot--table-toolbar-content"
                  data-testid="basicCardStory-table-table-toolbar-content"
                >
                  <button
                    aria-describedby={null}
                    aria-pressed={null}
                    className="bx--btn--icon-only iot--tooltip-svg-wrapper iot--btn bx--btn bx--btn--ghost"
                    data-testid="download-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    tabIndex={0}
                    title="Download table content"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Download table content"
                      className="bx--btn__icon"
                      fill="currentColor"
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26 24v4H6V24H4v4H4a2 2 0 002 2H26a2 2 0 002-2h0V24zM26 14L24.59 12.59 17 20.17 17 2 15 2 15 20.17 7.41 12.59 6 14 16 24 26 14z"
                      />
                    </svg>
                  </button>
                  <div
                    className="iot--flyout-menu iot--flyout-menu__bottom iot--flyout-menu__light"
                    data-testid="flyout-menu-container"
                    style={
                      Object {
                        "--tooltip-visibility": "hidden",
                      }
                    }
                  >
                    <button
                      aria-describedby={null}
                      aria-label=""
                      className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                      data-testid="flyout-menu-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        className="bx--assistive-text"
                        onMouseEnter={[Function]}
                      >
                        
                      </div>
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M30 8h-4.1c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2v2h14.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30V8zM21 12c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3S22.7 12 21 12zM2 24h4.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30v-2H15.9c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2V24zM11 20c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3S9.3 20 11 20z"
                        />
                      </svg>
                    </button>
                    <div
                      className="iot--flyout-menu--tooltip-anchor"
                      data-floating-menu-container={true}
                    >
                      <div
                        aria-describedby={null}
                        aria-expanded={false}
                        aria-label=""
                        className="bx--tooltip__label"
                        id="test-flyout-id"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      />
                    </div>
                  </div>
                </div>
              </section>
              <div
                className="addons-iot-table-container"
              >
                <div
                  className="bx--data-table-content"
                >
                  <table
                    className="bx--data-table bx--data-table--no-border"
                    data-testid="basicCardStoryTest-table"
                    id="basicCardStory-table"
                    title={null}
                  >
                    <thead
                      data-testid="basicCardStory-table-table-head"
                      onMouseMove={null}
                      onMouseUp={null}
                    >
                      <tr>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="2V2N 9KYPM"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-2V2N 9KYPM"
                          id="column-2V2N 9KYPM"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="2V2N 9KYPM"
                            >
                              2V2N 9KYPM
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="L22I P66EP L22I P66EP"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-L22I P66EP L22I P66EP"
                          id="column-L22I P66EP L22I P66EP"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="L22I P66EP L22I P66EP"
                            >
                              L22I P66EP L22I P66EP
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="JQAI 2M4L1"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-JQAI 2M4L1"
                          id="column-JQAI 2M4L1"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="JQAI 2M4L1"
                            >
                              JQAI 2M4L1
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="J9DZ F37AP"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-J9DZ F37AP"
                          id="column-J9DZ F37AP"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="J9DZ F37AP"
                            >
                              J9DZ F37AP
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="YEL48 Q6XK YEL48"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-YEL48 Q6XK YEL48"
                          id="column-YEL48 Q6XK YEL48"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="YEL48 Q6XK YEL48"
                            >
                              YEL48 Q6XK YEL48
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="Misc"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-Misc"
                          id="column-Misc"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="Misc"
                            >
                              Misc
                            </span>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      aria-live="polite"
                      data-testid="basicCardStory-table-table-body"
                    >
                      <tr
                        className="TableBodyRow__StyledTableRow-sc-103itxu-0 fNIOnc"
                        onClick={[Function]}
                      >
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="2V2N 9KYPM"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-2V2N 9KYPM"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                          >
                            <span
                              className=""
                              title={1}
                            >
                              1
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="L22I P66EP L22I P66EP"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-L22I P66EP L22I P66EP"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                          >
                            <span
                              className=""
                              title={10}
                            >
                              10
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="JQAI 2M4L1"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-JQAI 2M4L1"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                          >
                            <span
                              className=""
                              title={20}
                            >
                              20
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="J9DZ F37AP"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-J9DZ F37AP"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                          >
                            <span
                              className=""
                              title={50}
                            >
                              50
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="YEL48 Q6XK YEL48"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-YEL48 Q6XK YEL48"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                          >
                            <span
                              className=""
                              title={15}
                            >
                              15
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Misc"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-Misc"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 ieOGhB"
                          >
                            <span
                              className=""
                              title={40}
                            >
                              40
                            </span>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard custom colors 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard custom labels 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard custom tooltip 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard no data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--card--empty-message-wrapper"
          style={
            Object {
              "--card-content-padding": "16px",
            }
          }
        >
          No data for this card
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/PieChartCard with CardVariables 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
